WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
69270
[Chromium] Fix position check for double tap gesture detection
https://bugs.webkit.org/show_bug.cgi?id=69270
Summary
[Chromium] Fix position check for double tap gesture detection
Varun Jain
Reported
2011-10-03 11:19:00 PDT
Fix position check for double tap gesture detection
Attachments
Patch
(10.84 KB, patch)
2011-10-03 13:02 PDT
,
Varun Jain
no flags
Details
Formatted Diff
Diff
Patch
(10.84 KB, patch)
2011-10-03 13:44 PDT
,
Varun Jain
no flags
Details
Formatted Diff
Diff
Patch
(13.54 KB, patch)
2011-10-03 15:11 PDT
,
Varun Jain
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Varun Jain
Comment 1
2011-10-03 13:02:01 PDT
Created
attachment 109512
[details]
Patch
Robert Kroeger
Comment 2
2011-10-03 13:34:44 PDT
Comment on
attachment 109512
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=109512&action=review
Looks largely ok to me.
> ChangeLog:4 > + should not be detected if thw two taps are far from each other.
typo: thw
> Source/WebCore/platform/chromium/GestureRecognizerChromium.h:97 > + IntPoint m_lastClickPosition;
At some point, this will all need to be refactored. But not now.
> Source/WebKit/chromium/tests/InnerGestureRecognizerTest.cpp:382 > +#if OS(MAC_OS_X)
How about looking into why later? (There's already a bug for it.)
Varun Jain
Comment 3
2011-10-03 13:44:46 PDT
Created
attachment 109523
[details]
Patch
Varun Jain
Comment 4
2011-10-03 13:45:30 PDT
(In reply to
comment #2
)
> (From update of
attachment 109512
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=109512&action=review
> > Looks largely ok to me. > > > ChangeLog:4 > > + should not be detected if thw two taps are far from each other. > > typo: thw
Done
> > > Source/WebCore/platform/chromium/GestureRecognizerChromium.h:97 > > + IntPoint m_lastClickPosition; > > At some point, this will all need to be refactored. But not now. > > > Source/WebKit/chromium/tests/InnerGestureRecognizerTest.cpp:382 > > +#if OS(MAC_OS_X) > > How about looking into why later? (There's already a bug for it.)
Yes I do plan to look into this later (if you do not get to it first)
Varun Jain
Comment 5
2011-10-03 15:11:03 PDT
Created
attachment 109537
[details]
Patch
Darin Fisher (:fishd, Google)
Comment 6
2011-10-04 15:05:49 PDT
Comment on
attachment 109537
[details]
Patch OK
WebKit Review Bot
Comment 7
2011-10-04 15:47:23 PDT
Comment on
attachment 109537
[details]
Patch Clearing flags on attachment: 109537 Committed
r96657
: <
http://trac.webkit.org/changeset/96657
>
WebKit Review Bot
Comment 8
2011-10-04 15:47:29 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug