Fix position check for double tap gesture detection. A double tap should not be detected if the two taps are far from each other. https://bugs.webkit.org/show_bug.cgi?id=69270

Patch by Varun Jain <varunjain@chromium.org> on 2011-10-04
Reviewed by Darin Fisher.

Test: Source/WebKit/chromium/tests/InnerGestureRecognizerTest.cpp

* platform/chromium/GestureRecognizerChromium.cpp:
(WebCore::GestureRecognizerChromium::isSecondClickInsideManhattanSquare):
(WebCore::GestureRecognizerChromium::updateValues):
(WebCore::GestureRecognizerChromium::click):
* platform/chromium/GestureRecognizerChromium.h:

Canonical link: https://commits.webkit.org/85419@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@96657 268f45cc-cd09-0410-ab3c-d52691b4dbfc